WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158733
[Win] MiniBrowser is not DPI aware.
https://bugs.webkit.org/show_bug.cgi?id=158733
Summary
[Win] MiniBrowser is not DPI aware.
Per Arne Vollan
Reported
2016-06-14 06:51:02 PDT
This means Windows will scale the contents itself. The quality of the rendering will not be as good as when we are DPI aware and scale the contents ourselves.
Attachments
Patch
(1.06 KB, patch)
2016-06-14 06:55 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-06-14 06:55:38 PDT
Created
attachment 281255
[details]
Patch
Brent Fulgham
Comment 2
2016-06-14 07:49:41 PDT
Comment on
attachment 281255
[details]
Patch Oops! Thank you for fixing this!
Per Arne Vollan
Comment 3
2016-06-14 08:13:16 PDT
(In reply to
comment #2
)
> Comment on
attachment 281255
[details]
> Patch > > Oops! Thank you for fixing this!
Thanks for reviewing :)
Per Arne Vollan
Comment 4
2016-06-15 02:36:36 PDT
Committed
r202087
: <
https://trac.webkit.org/changeset/202087
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug