[Win] MiniBrowser is not DPI aware. https://bugs.webkit.org/show_bug.cgi?id=158733

Reviewed by Brent Fulgham.

Call Win32 api function to let Windows know that we will scale the contents ourselves.

* MiniBrowser/win/WinMain.cpp:
(wWinMain):


Canonical link: https://commits.webkit.org/176866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202087 268f45cc-cd09-0410-ab3c-d52691b4dbfc